[package]
name = "connman"
version = "0.1.3"
authors = ["Jon Magnuson <jon.magnuson@gmail.com>"]
description = "A ConnMan library that abstracts the D-Bus layer"
repository = "https://github.com/jmagnuson/connman-rs"
documentation = "https://docs.rs/connman"
readme = "README.md"
categories = ["api-bindings", "asynchronous", "network-programming", "os::unix-apis"]
keywords = ["connman", "dbus", "wifi", "networking", "tokio"]
edition = "2018"
license = "MIT/Apache-2.0"

[lib]
name = "connman"
path = "src/lib.rs"

[[example]]
name = "wifi_connect"
path = "examples/wifi_connect.rs"

[[example]]
name = "wifi_scan_list"
path = "examples/wifi_scan_list.rs"

[[example]]
name = "wifi_introspect"
path = "examples/wifi_introspect.rs"
required-features = ["introspection"]

[features]
default = []
introspection = ["xml-rs"]

[dependencies]
dbus = "0.6"
dbus-tokio = "0.3"
failure = "0.1"
futures = "0.1"
tokio = "0.1"
xml-rs = { version = "0.3", optional = true }

[dev-dependencies]
hex = "0.3"
structopt = "0.2"
